prometheus-nodejs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-nodejs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-nodejs-app
  template:
    metadata:
      labels:
        app: prometheus-nodejs-app
    spec:
      containers:
      - name: prometheus-nodejs-container
        image: bardiark03/prometheus-k8s-nodejs
        ports:
        - containerPort: 4000
