prometheus-nodejs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodejs-service
spec:
  selector:
    app: prometheus-nodejs-app
  ports:
    - protocol: TCP
      port: 4000       # Port that the service will expose
      targetPort: 4000  # Port that the container is listening on
