prometheus-nodejs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.nodejs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-nodejs-service
                port:
                  number: 4000
